--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,14 +24,12 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-        
         # Runs a single command using the runners shell
       - name: Run a one-line script
         run: ls /lib/modules
+
+      - name: Run a one-line script2
+        run:  modprobe i2c-dev
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
